[package]
name = "json_macro"
version = "0.1.0"
edition = "2021"
authors = ["arnau"]
license = "MIT"
description = "This macro reduces boilerplate when using serde_json::Value variants when trying to get into a nested property."


[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

# [profile.dev]
# opt-level = 1

# [profile.releasepool]
# opt-level = 1