[package]
name = "json_extract"
version = "0.1.2"
edition = "2021"
authors = ["arnau"]
license = "MIT"
description = "This macro reduces boilerplate when using serde_json::Value variants when trying to get into a nested property."


[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
